# compact-memory

./: .flake8  .gitignore  .pre-commit-config.yaml  =8.2  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md  RESULTS.md  STRATEGY_DEVELOPMENT.md  TODO.md  USAGE.md  api_test.py  compact_memory_exploration_report.md  compressed_standalone.txt  engine_metrics.json  llm_models_config.yaml  modified_notebook.json  mypy.ini  processed_notebook_add_model_note.json  processed_notebook_compress_updates.json  processed_notebook_final_cumulative.json  pyproject.toml  requirements.txt  sample_doc.txt  setup.sh  test_failures.txt  test_readagent_fix_verification.txt  test_results_after_fixes.txt  todo.md
.codex/: setup.sh
CompressionStrategy/contrib/compact_memory_rationale_episode_strategy/: README.md  pyproject.toml  storage.py
CompressionStrategy/contrib/compact_memory_rationale_episode_strategy/tests/: test_rationale_episode.py
compact_memory/: __init__.py  active_memory_manager.py  active_memory_strategy.py  agent.py  api_config.py  api_exceptions.py  api_functions.py  api_models.py  chunking.py  cli.py  cli_utils.py  compression.py  config.py  embedding_pipeline.py  experiment_runner.py  first_last_strategy.py  history_experiment.py  importance_filter.py  json_npy_store.py  learned_summarizer_strategy.py  local_llm.py  memory_container.py  memory_creation.py  memory_store.py  models.py  new_agent.py  package_utils.py  plugin_loader.py  prototype_engine.py  prototype_system.py  prototype_system_strategy.py  registry.py  response_experiment.py  segmentation.py  spacy_utils.py  utils.py  vector_store.py
compact_memory_rationale_episode_strategy/: __init__.py  episode.py
completions/: compact-memory.bash
contrib/: __init__.py
docs/: ADVANCED_PARAMETER_TUNING.md  ARCHITECTURE.md  COMPRESSION_ENGINES.md  COMPRESSION_STRATEGIES.md  CONTRIBUTING.md  DEVELOPING_CLI_PLUGINS.md  DEVELOPING_COMPRESSION_ENGINES.md  DEVELOPING_COMPRESSION_STRATEGIES.md  DEVELOPING_VALIDATION_METRICS.md  ENGINE_DEVELOPMENT.md  EXPLAINABLE_COMPRESSION.md  MIGRATION_TO_ENGINES.md  PROJECT_VISION.md  QUERYING_PLAYBOOK.md  QUERY_TIPS.md  READAGENT_OPENAI_TEST.md  README.md  RESULTS.md  RUNNING_EXPERIMENTS.md  SEGMENTATION_PLAYBOOK.md  SHARING_ENGINES.md  SHARING_STRATEGIES.md  STORAGE_FORMAT.md  TODO.md  TROUBLESHOOTING.md  USAGE.md  advanced_compress_text_example.py  api_getting_started.md  api_reference.md  cli_reference.md  community_strategies.md  configuration.md  conversational_memory_example.py  evaluation.md  index.md  rag_pipeline_example.py
examples/: active_memory_dialogue_demo.py  basic_pipeline_example.py  chunking.py  cli_pipeline_examples.md  collect_engine_metrics.py  compact_memory_researcher_guide.ipynb  compact_memory_showcase.ipynb  compact_memory_user_guide.ipynb  custom_storage_and_embeddings_demo.py  eval_promptfoo.yaml  experiment_1.py  gist_memory_showcase.ipynb  history_dialogues.yaml  history_tuning_experiment.py  llm_helpers.py  onboarding_demo.py  prototype_evolution_demo.py  readagent_with_llm_provider.py
gist_memory/: __init__.py  __main__.py  active_memory_manager.py  active_memory_strategy.py  agent.py  autocomplete_input.py  canonical.py  chunker.py  cli.py  cli_plugins.py  cli_utils.py  compression.py  config.py  conflict.py  conflict_flagging.py  embedder.py  embedding_pipeline.py  experiment_runner.py  history_experiment.py  hpo.py  importance_filter.py  json_npy_store.py  llm_providers_abc.py  local_llm.py  logging_utils.py  memory_creation.py  memory_cues.py  models.py  package_utils.py  plugin_loader.py  prototype_system_strategy.py  registry.py  response_experiment.py  segmentation.py  spacy_utils.py  store.py  talk_session.py  token_utils.py  tui.py  utils.py
gist_memory_rationale_episode_strategy/: README.md  cli.py  pyproject.toml  storage.py
gist_memory_rationale_episode_strategy/tests/: test_rationale_episode.py
gist_tui/: __init__.py  __main__.py
my_cli_memory/: engine_manifest.json
my_lpc_strategies/: lpc_selector.py
sample_data/: README.md
scripts/: setup_heavy_deps.sh
tests/: conftest.py  test_active_memory_engine.py  test_active_memory_manager.py  test_active_memory_strategy.py  test_agent.py  test_agent_canonical.py  test_api_config.py  test_api_functions.py  test_api_models.py  test_base_engine.py  test_canonical.py  test_chunker.py  test_cli.py  test_cli_compress.py  test_cli_compress_integration.py  test_cli_config.py  test_cli_dev.py  test_cli_engine.py  test_cli_ingest_query.py  test_cli_llm_compress.py  test_cli_metrics.py  test_cli_optimize.py  test_cli_utils.py  test_compression_engines.py  test_compression_metrics.py  test_compression_strategies.py  test_compression_trace.py  test_config.py  test_conflict.py  test_contrib.py  (+39 more)
(+177 files in other folders)
