[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compact-memory"
version = "0.1.0"
description = "LLM memory compression utilities"
authors = [{name = "Scott Falconer"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "openai",
    "tiktoken",
    "numpy",
    "faiss-cpu",
    "click>=8.1.7",
    "tqdm",
    "pydantic>=2.0",
    "pyyaml",
    "typer>=0.16.0",
    "portalocker",
    "cloudpickle",
    "rich>=13.6",
    "platformdirs",
    "nltk",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["flake8", "pre-commit"]
chroma = ["chromadb"]
spacy = ["spacy"]
optuna = ["optuna"]
ray = ["ray[tune]"]
embedding = ["sentence-transformers", "torch"]
local = ["transformers", "torch"]
gemini = ["google-generativeai"]
metrics = ["evaluate"]

[project.scripts]
compact-memory = "compact_memory.__main__:main"
[tool.setuptools.packages.find]
where = ["src"]
include = ["compact_memory", "compact_memory.*"]

[tool.setuptools.package-data]
"compact_memory" = ["py.typed"]
