[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gist_memory_rationale_episode_strategy"
version = "0.1.0"
description = "Rationale-enhanced episode memory plugin for gist-memory"
authors = [{name = "Gist Memory Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["gist-memory"]

[project.entry-points."gist_memory.cli"]
rationale_episodes = "gist_memory_rationale_episode_strategy.cli:episodes_app"

[tool.setuptools.packages.find]
where = ["."]
