[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compact_memory_rationale_episode_strategy"
version = "0.1.0"
description = "Rationale-enhanced episode memory plugin for compact-memory"
authors = [{name = "Compact Memory Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["compact-memory"]

[project.entry-points."compact_memory.cli"]
rationale_episodes = "compact_memory_rationale_episode_strategy.cli:episodes_app"

[tool.setuptools.packages.find]
where = ["."]
